# Prog_Tech

./: CMakeLists.txt  collatz.c  collatz_bit.c  collatz_re.c  collatz_re_bit.c  digit_loss.c  file_io.c  info_loss.c  komachi.c  normal_rand.c  num_swap.c  rand.c  rand_rand.c  rand_under_N.c  round_math.c  round_vanilla.c  round_vanilla_limited.c  rounding_error.c  sys_buf.c  sys_buf_char.c
